crates/ruff_mdtest/resources/mdtest/snapshots/f-string.md_-_`f-string`_(`UP032`)_-_Format-time_accessor…_(2c28823ff83e345d).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: f-string.md - `f-string` (`UP032`) - Format-time accessors with side-effecting arguments emit an unsafe fix
mdtest path: crates/ruff_linter/../ruff_linter/resources/mdtest/pyupgrade/f-string.md
---

# Python source files

## mdtest_snippet.py

```
1 | "{[x]} {}".format(d, len(d))  # error: [f-string]
2 | "{0.attr} {1}".format(obj, side_effect())  # error: [f-string]
```

# Diagnostics

```
error[UP032]: Use f-string instead of `format` call
 --> src/mdtest_snippet.py:1:1
  |
1 | "{[x]} {}".format(d, len(d))  # error: [f-string]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: Convert to f-string
  - "{[x]} {}".format(d, len(d))  # error: [f-string]
1 + f"{d['x']} {len(d)}"  # error: [f-string]
2 | "{0.attr} {1}".format(obj, side_effect())  # error: [f-string]
note: This is an unsafe fix and may change runtime behavior

```

```
error[UP032]: Use f-string instead of `format` call
 --> src/mdtest_snippet.py:2:1
  |
2 | "{0.attr} {1}".format(obj, side_effect())  # error: [f-string]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: Convert to f-string
1 | "{[x]} {}".format(d, len(d))  # error: [f-string]
  - "{0.attr} {1}".format(obj, side_effect())  # error: [f-string]
2 + f"{obj.attr} {side_effect()}"  # error: [f-string]
note: This is an unsafe fix and may change runtime behavior

```
